--- a/style.css
+++ b/style.css
@@ -118,3 +118,9 @@ button:active {
     color: #f85157;
     font-size: 12px;
 }
+
+@media only screen and (max-width: 768px) {
+    #entry {
+        font-size: 30px;
+    }
+}
